[tool.poetry]
name = "airthings-ble"
version = "0.9.1"
description = "Manage Airthings BLE devices"
authors = ["Vincent Giorgi", "Ståle Storø Hauknes"]
readme = "README.md"
repository = "https://github.com/Airthings/airthings-ble"
documentation = "https://airthings-ble.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
packages = [
    { include = "airthings_ble" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Airthings/airthings-ble/issues"

[tool.poetry.dependencies]
python = "^3.9"

# Documentation Dependencies
bleak = ">=0.15.1"
bleak-retry-connector = ">=1.8.0"
async-interrupt = ">=1.1.1"
async-timeout = {version = ">=4.0.1", markers = "python_version < \"3.11\""}

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
black = {version = "^24.1.1"}
mypy = "^1.8.0"
pylint = "^3.0.3"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "airthings_ble/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=airthings_ble --cov-report=term-missing:skip-covered"
pythonpath = ["airthings_ble"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["airthings_ble", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
