[tool.poetry]
name = "airthings-ble"
version = "1.0.0"
description = "Manage Airthings BLE devices"
authors = ["Vincent Giorgi", "Ståle Storø Hauknes"]
readme = "README.md"
repository = "https://github.com/Airthings/airthings-ble"
documentation = "https://airthings-ble.readthedocs.io"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
packages = [
    { include = "airthings_ble" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Airthings/airthings-ble/issues"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
bleak = ">=0.22.0"
bleak-retry-connector = ">=3.9.0"
async-interrupt = ">=1.2.2"
async-timeout = ">=5.0.1"
cbor2 = ">=5.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.0"
black = "^25.1.0"
mypy = "^1.16.0"
pylint = "^3.3.7"
pytest-asyncio = "^1.0.0"
pytest-rerunfailures = "^15.1.0"
ruff = "^0.4.4"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "airthings_ble/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=airthings_ble --cov-report=term-missing:skip-covered"
pythonpath = ["airthings_ble"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[tool.mypy."tests.*"]
allow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["docs", "build"]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = ["E203", "E501"]  # For black-compatibilitet

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Tillat bruk av assert i tester

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
