[project]
name = "airthings-ble"
version = "1.2.0"
description = "Manage Airthings BLE devices"
authors = [
    { name = "Vincent Giorgi" },
    { name = "Ståle Storø Hauknes" },
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://www.airthings.com"
"Source" = "https://github.com/Airthings/airthings-ble"
"Bug Reports" = "https://github.com/Airthings/airthings-ble/issues"

[tool.poetry.dependencies]
bleak = ">=1.0.1"
bleak-retry-connector = ">=4.4.3"
async-interrupt = ">=1.2.2"
cbor2 = ">=5.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^7.0.0"
black = "^25.1.0"
mypy = "^1.16.0"
pylint = "^4.0.0"
pytest-asyncio = "^1.0.0"
pytest-rerunfailures = "^15.1.0"
ruff = ">=0.12.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "airthings_ble/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=airthings_ble --cov-report=term-missing:skip-covered"
pythonpath = ["airthings_ble"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    "tests/.*",
    "setup.py",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["docs", "build"]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
